--- a/docs/pages/versions/unversioned/sdk/video.mdx
+++ b/docs/pages/versions/unversioned/sdk/video.mdx
@@ -9,6 +9,10 @@ platforms: ['android', 'ios', 'web']
 import APISection from '~/components/plugins/APISection';
 import { APIInstallSection } from '~/components/plugins/InstallSection';
 import { SnackInline } from '~/ui/components/Snippet';
+import {
+  ConfigPluginExample,
+  ConfigPluginProperties,
+} from '~/components/plugins/ConfigSection';
 
 > **info** `expo-video` is a new, experimental library that aims to replace the `Video` component from `expo-av` with a more modern and reliable implementation. If you are looking for a more stable API, use [`expo-av`](av.mdx) until this library has stabilized.
 
@@ -17,6 +21,46 @@ import { SnackInline } from '~/ui/components/Snippet';
 ## Installation
 
 <APIInstallSection />
+
+## Configuration in app.json/app.config.js
+
+You can configure `expo-video` using its built-in [config plugin](/config-plugins/introduction/). The plugin allows you to configure various properties that cannot be set at runtime and require building a new app binary to take effect.
+
+<ConfigPluginExample>
+
+  ```json app.json
+  {
+    "expo": {
+      "plugins": [
+        [
+          "expo-video",
+          {
+            "supportsBackgroundPlayback": true,
+            "supportsPictureInPicture": true
+          }
+        ]
+      ],
+    }
+  }
+  ```
+
+</ConfigPluginExample>
+
+<ConfigPluginProperties
+  properties={[
+    {
+      name: 'supportsBackgroundPlayback',
+      description: 'A boolean value to enable background playback on iOS. If `true` the `audio` key is added to the `UIBackgroundModes` array in the `Info.plist` file. When `false` the key is removed. When `undefined` the key is not modified.',
+      platform: 'ios',
+      default: 'undefined',
+    },
+    {
+      name: 'supportsPictureInPicture',
+      description: 'A boolean value to enable Picture-in-Picture on Android and iOS. Configures the `android:supportsPictureInPicture` property on Android and the `UIBackgroundModes` array in the `Info.plist` file on iOS. When `undefined` the configuration is not modified.',
+      default: 'undefined',
+    },
+  ]}
+/>
 
 ## Usage
 
