--- a/docs/pages/guides/using-eslint.mdx
+++ b/docs/pages/guides/using-eslint.mdx
@@ -35,6 +35,10 @@ Install ESLint, and [`eslint-config-expo`](https://github.com/expo/expo/tree/mai
     '',
     '# For other package managers',
     '$ npx expo install -- --save-dev eslint@8 eslint-config-expo',
+    ''.
+    '# For bun only',
+    '$ bun add -D prettier eslint-config-prettier eslint-plugin-prettier',
+    ''.
     '',
     '# For yarn only',
     '$ yarn add -D eslint eslint-config-expo',
